--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -73,3 +73,43 @@
 .card-back--hide {
   display: none;
 }
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,0,0,0.3);
+  padding: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.modal {
+  background: #ffffff;
+  border-radius: 5%;
+  margin: 0 auto;
+  padding: 30px
+}
+
+.modal__close {
+  float: right;
+  font-size: 24px;
+  margin-top: -15px;
+  margin-right: -15px;
+  cursor: pointer;
+}
+
+.modal__image {
+  width: 200px;
+}
+
+.modal__reset-button {
+  background: #4F2683;
+  color: #FFC62F;
+  margin: 0 auto;
+  width: 120px;
+  padding: 5px;
+  cursor: pointer;
+}
