--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,8 +14,18 @@
   background: #4F2683;
 }
 
-.header > h1 {
+.header__title {
   font-size: 4em;
+}
+
+.reset-button {
+  background: #4F2683;
+  color: #FFC62F;
+  margin: 0 auto;
+  width: 120px;
+  padding: 5px;
+  cursor: pointer;
+  text-align: center;
 }
 
 .game-board {
@@ -79,6 +89,35 @@
   display: none;
 }
 
+.card-front--successful-match {
+  animation: successful-match 0.5s;
+}
+
+@keyframes successful-match {
+  50% {
+    box-shadow: 0px 35px 77px -17px #FFC62F;
+    transform: scale(1.05);
+  }
+}
+
+.card-front--shake {
+  animation: shake 0.5s;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 .modal-background {
   position: fixed;
   top: 0;
@@ -109,32 +148,4 @@
 
 .modal__image {
   width: 200px;
-}
-
-.reset-button {
-  background: #4F2683;
-  color: #FFC62F;
-  margin: 0 auto;
-  width: 120px;
-  padding: 5px;
-  cursor: pointer;
-  text-align: center;
-}
-
-.card-front--shake {
-  animation: shake 0.5s;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
